# playtomic-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPER_GUIDE.md  DOCKER_DEVELOPMENT.md  Dockerfile  Dockerfile.prod  Dockerfile.whatsapp  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  find_slots.py  pyproject.toml  requirements.txt  skills-lock.json
.agent/: backlog.md
.agent/rules/: documentation.md  git.md
.agents/: backlog.md
.claude/: settings.json
.claude/agents/: github-pr-reviewer.md
.claude/hooks/notification/: skill-suggester.sh
.claude/hooks/post-tool-use/: post-tool-use-tracker.sh
.claude/hooks/pre-tool-use/: ruff-gate.sh
.claude/hooks/user-prompt-submit/: skill-activation-prompt.sh
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md
docs/product/: backlog.md
example_data/: availablity.json  club.html  club.json  inactive-club.json  tenants.json
monitoring/prometheus/: Dockerfile  prometheus.yml
playtomic-agent/: agent.py  langgraph.json  tools.py
playtomic-agent/playtomic_client/: client.py  data_models.py  models.py  playtomic_client.py
scripts/: docker-dev.ps1  start-dev.sh
src/playtomic_agent/: __init__.py  agent.py  api.py  config.py  context.py  langgraph.json  llm.py  log_config.py  metrics.py  models.py  tools.py  uvicorn_log_config.json
src/playtomic_agent/client/: __init__.py  api.py  cli.py  exceptions.py  utils.py
src/playtomic_agent/web/: agent.py  api.py  server.py  vote_store.py
src/playtomic_agent/whatsapp/: agent.py  server.py  storage.py
tests/: __init__.py  conftest.py  test_api.py  test_client.py  test_config.py  test_exceptions.py  test_metrics.py  test_models.py  test_usage_callback.py  test_whatsapp_agent.py  test_whatsapp_storage.py
tests/client/: test_client.py  test_instrumentation.py
tests/web/: test_api.py  test_vote_api.py  test_vote_store.py
tests/whatsapp/: test_agent.py  test_message_handling.py  test_metrics_endpoint.py  test_ops3.py  test_poll_threshold.py  test_storage.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  i18n.js  main.jsx  regions.js  styles.css
web/src/components/: Chat.jsx  FindMode.jsx  ProfileCard.jsx  ProfileSuggestion.jsx  RegionSelector.jsx  ScanMode.jsx  VotePage.jsx
web/src/hooks/: usePresets.js  useProfile.js  useRegion.js
web/src/locales/de/: translation.json
web/src/locales/en/: translation.json
